tests/ui/asm/x86_64/goto-block-safe.stderr
error[E0133]: call to unsafe function `such_unsafe` is unsafe and requires unsafe function or block
  --> $DIR/goto-block-safe.rs:19:17
   |
LL |     unsafe {
   |     ------ items do not inherit unsafety from separate enclosing items
...
LL |                 such_unsafe()
   |                 ^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
